manifests/argo/netpol-workflow-pods.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: workflow-pods
  namespace: argo
spec:
  endpointSelector:
    matchExpressions:
      - key: workflows.argoproj.io/workflow
        operator: Exists
      - key: backup-workflow
        operator: DoesNotExist
      - key: pxe-sync
        operator: DoesNotExist
      - key: talos-build
        operator: DoesNotExist
      - key: kanidm-repl-exchange
        operator: DoesNotExist
      - key: kanidm-backup
        operator: DoesNotExist
  ingressDeny:
    - fromEntities:
        - world
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toCIDR:
        - 0.0.0.0/0
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: seaweedfs
            app.kubernetes.io/component: filer
            io.kubernetes.pod.namespace: seaweedfs
      toPorts:
        - ports:
            - port: "8333"
              protocol: TCP
    - toCIDR:
        - 192.168.10.200/32
        - 192.168.10.201/32
        - 192.168.10.202/32
        - 192.168.10.230/32
        - 192.168.10.231/32
        - 192.168.10.232/32
      toPorts:
        - ports:
            - port: "50000"
              protocol: TCP
